syntax = "proto2";

package dispatcher;

message Request {
  repeated Stage stage = 1;

  message Stage {
    optional string stage_name = 1;
    repeated Task task = 2;

    message Task {
      optional string task_name = 1;
      optional string service_name = 2;
      repeated TaskArg task_arg = 3;

      message TaskArg {
        optional string key = 1;
        optional string value = 2;
      }
    }
  }
}

message Response {
  repeated StageResult stage_result = 1;

  message StageResult {
    optional string stage_name = 1;
    repeated TaskResult task_result = 2;

    message TaskResult {
      optional string task_name = 1;
      optional string result = 2;
      optional string detail = 3;
    }
  }
}